# Onebot11Protocol

./: README.md  pyproject.toml
src/onebot11protocol/api/: hidden.py  public.py  shared.py
src/onebot11protocol/communication/: base.py  ws.py
src/onebot11protocol/event/: __init__.py  base.py  message.py  meta.py  notice.py  request.py
src/onebot11protocol/message/: __init__.py  segment.py
tests/: __init__.py
